# SkillTree

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  jest.config.ts  package-lock.json  package.json  tailwind.config.ts
.github/: REPOSITORY_METADATA.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
__tests__/components/: dashboard-page.test.tsx  new-roadmap-page.test.tsx  world-header.test.tsx
__tests__/lib/: context-questions.test.ts  layout-engine.test.ts  roadmap-ai-prompts.test.ts  roadmap-copy.test.ts  skill-tree-editor-copy.test.ts  status-engine.test.ts  tree-editor-utils.test.ts  tree-portability.test.ts  tree-sharing.test.ts
crates/skilltree-local/: Cargo.toml
crates/skilltree-local/src/: main.rs
docs/: ARCHITECTURE.md  PORTFOLIO.md
docs/superpowers/plans/: 2026-04-04-skiltree-implementation.md  2026-04-05-poe-editor-redesign.md  2026-04-05-skilltree-perfection.md  2026-04-06-connections-and-description.md
docs/superpowers/specs/: 2026-04-04-skiltree-design.md  (+1 more)
legacy-web/: .dockerignore  CLAUDE.md  README.md  docker-compose.yml  docker-entrypoint.sh  jest.config.ts  tailwind.config.ts
legacy-web/src/: middleware.ts
obsidian-plugin/skilltree-control/: README.md  esbuild.config.mjs  main.js  manifest.json  package.json  styles.css  tsconfig.json
prisma/: schema.prisma
scripts/: doctor.mjs  install-desktop.sh  install-obsidian-plugin.mjs  setup.mjs  setup.ps1  setup.sh
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/lib/: auth.ts  copy-constants.ts  layout-engine.ts  openrouter.ts  roadmap-ai-prompts.ts  status-engine.ts  tree-data.ts  tree-editor-utils.ts  tree-portability.ts  use-keyboard-shortcuts.ts
src/types/: index.ts
(+74 files in other folders)
