[package]
name = "skilltree-local"
version = "0.2.0"
edition = "2021"
description = "Local-first Rust desktop app for skill-tree planning with Obsidian-backed Markdown storage."
license = "MIT"
repository = "https://github.com/aytzey/SkillTree"
readme = "../../README.md"
keywords = ["desktop", "obsidian", "markdown", "egui", "productivity"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
eframe = { version = "0.33", default-features = true }
egui = "0.33"
opener = "0.8"
rfd = "0.15"
self_update = { version = "0.44", default-features = false, features = ["reqwest", "default-tls", "archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
